fix binder settings

--- a/text_analyse.ipynb
+++ b/text_analyse.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "import py2neo\n",
     "\n",
-    "graph = py2neo.Graph(bolt=True, host='localhost', user='neo4j', password='0000')"
+    "graph = py2neo.Graph(bolt=True, host='localhost', user='neo4j', password='neo4j')"
    ]
   },
   {
