--- a/text_analyse.ipynb
+++ b/text_analyse.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Global Task: Components or cross-sectional aspects in the application code, which are particularly frequently affected by bugs/errors "
+    "#### Global Task:  Search for components or cross-sectional aspects in the application code, which are particularly frequently affected by bugs/errors. "
    ]
   },
   {
@@ -22,7 +22,7 @@
     }
    },
    "source": [
-    "## Detection of bugs and errors based on the language"
+    "## Detection of bugs and errors based on the issue-language"
    ]
   },
   {
@@ -38,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.import trainings-data from file"
+    "### 1.Import training data from csv-file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -52,50 +52,13 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "<bound method DataFrame.isna of     entity                                              title  \\\n",
-      "0     node                            fixed typo in README.md   \n",
-      "1     node  ** does not include files in the current direc...   \n",
-      "2     node                           fixed typos and spacings   \n",
-      "3     node  Docker: ERROR: Copybara config file filename s...   \n",
-      "4     node  Issue VACCUM SQL directive to prevent the DB f...   \n",
-      "..     ...                                                ...   \n",
-      "511   node  Create bug report and feature request issue te...   \n",
-      "512   node                             cannot resolve method.   \n",
-      "513   node  classCastException android.graphics.drawable.c...   \n",
-      "514   node                      Fix path in integration tests   \n",
-      "515   node  MaterialListViewAdapter.getItemViewType error,...   \n",
-      "\n",
-      "                                                  body  class  \\\n",
-      "0    I changed the line \"to create a executable ube...      1   \n",
-      "1    It would be great if its behavior matched that...      1   \n",
-      "2              fixed typos and spacings in `README.md`      1   \n",
-      "3    In README.md\\r\\n> A few environment variables ...      1   \n",
-      "4    This is a re-patch of 69a69977470dc0b6c0cbccd1...      1   \n",
-      "..                                                 ...    ...   \n",
-      "511  Many historic GitHub issues have shown that us...      1   \n",
-      "512  Hello, thanks for this great library.\\n\\nI wou...      1   \n",
-      "513  app crashes at cardView.setBackgroundColor(car...      1   \n",
-      "514                                          Fixes #51      1   \n",
-      "515  this method return -1 , so i got this error \\n...      1   \n",
-      "\n",
-      "                                             full_body  \n",
-      "0    line create executable create executable word ...  \n",
-      "1    would great behavior build prominently include...  \n",
-      "2                                          fixed fixed  \n",
-      "3    environment exist allow change run copy bara s...  \n",
-      "4    patch baa added pull request issue directive p...  \n",
-      "..                                                 ...  \n",
-      "511  many historic shown tend unaware repository fo...  \n",
-      "512  hello thanks great library would like request ...  \n",
-      "513  card android graphics drawable cast android su...  \n",
-      "514                               fix path integration  \n",
-      "515  method return got error unable start activity ...  \n",
-      "\n",
-      "[516 rows x 5 columns]>\n"
-     ],
-     "output_type": "stream"
+     "data": {
+      "text/plain": "  entity                                              title  \\\n0   node                            fixed typo in README.md   \n1   node  ** does not include files in the current direc...   \n2   node                           fixed typos and spacings   \n3   node  Docker: ERROR: Copybara config file filename s...   \n4   node  Issue VACCUM SQL directive to prevent the DB f...   \n\n                                                body  class  \\\n0  I changed the line \"to create a executable ube...      1   \n1  It would be great if its behavior matched that...      1   \n2            fixed typos and spacings in `README.md`      1   \n3  In README.md\\r\\n> A few environment variables ...      1   \n4  This is a re-patch of 69a69977470dc0b6c0cbccd1...      1   \n\n                                           full_body  \n0  line create executable create executable word ...  \n1  would great behavior build prominently include...  \n2                                        fixed fixed  \n3  environment exist allow change run copy bara s...  \n4  patch baa added pull request issue directive p...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>entity</th>\n      <th>title</th>\n      <th>body</th>\n      <th>class</th>\n      <th>full_body</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>node</td>\n      <td>fixed typo in README.md</td>\n      <td>I changed the line \"to create a executable ube...</td>\n      <td>1</td>\n      <td>line create executable create executable word ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>node</td>\n      <td>** does not include files in the current direc...</td>\n      <td>It would be great if its behavior matched that...</td>\n      <td>1</td>\n      <td>would great behavior build prominently include...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>node</td>\n      <td>fixed typos and spacings</td>\n      <td>fixed typos and spacings in `README.md`</td>\n      <td>1</td>\n      <td>fixed fixed</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>node</td>\n      <td>Docker: ERROR: Copybara config file filename s...</td>\n      <td>In README.md\\r\\n&gt; A few environment variables ...</td>\n      <td>1</td>\n      <td>environment exist allow change run copy bara s...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>node</td>\n      <td>Issue VACCUM SQL directive to prevent the DB f...</td>\n      <td>This is a re-patch of 69a69977470dc0b6c0cbccd1...</td>\n      <td>1</td>\n      <td>patch baa added pull request issue directive p...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 21
     }
    ],
    "source": [
@@ -107,30 +70,7 @@
     "\n",
     "\n",
     "df= pd.read_csv('training.csv')\n",
-    "df=df.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  entity                                              title  \\\n0   node                            fixed typo in README.md   \n1   node  ** does not include files in the current direc...   \n2   node                           fixed typos and spacings   \n3   node  Docker: ERROR: Copybara config file filename s...   \n4   node  Issue VACCUM SQL directive to prevent the DB f...   \n5   node  Fix Issue 100: first card in list can never be...   \n6   node  Changes are package protected and can't easily...   \n7   node                              Exception on rotation   \n8   node         BugFix, Resource-ID, ListCard, Abstraction   \n9   node                  Unable to run coursier on Windows   \n\n                                                body  class  \\\n0  I changed the line \"to create a executable ube...      1   \n1  It would be great if its behavior matched that...      1   \n2            fixed typos and spacings in `README.md`      1   \n3  In README.md\\r\\n> A few environment variables ...      1   \n4  This is a re-patch of 69a69977470dc0b6c0cbccd1...      1   \n5                                            Thanks.      1   \n6  #5 helped with exposing Info programatically b...      1   \n7  When I rotate my device I received the followi...      1   \n8  - I maybe fixed the Bug (#22). This should be ...      1   \n9  After installing JDK8 and running the first ba...      1   \n\n                                           full_body  \n0  line create executable create executable word ...  \n1  would great behavior build prominently include...  \n2                                        fixed fixed  \n3  environment exist allow change run copy bara s...  \n4  patch baa added pull request issue directive p...  \n5             thanks fix issue first card list never  \n6  found tried use package also package package e...  \n7  rotate device received following exception pro...  \n8  maybe fixed bug tested able reproduce exceptio...  \n9  running first build command get call stack def...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>entity</th>\n      <th>title</th>\n      <th>body</th>\n      <th>class</th>\n      <th>full_body</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>node</td>\n      <td>fixed typo in README.md</td>\n      <td>I changed the line \"to create a executable ube...</td>\n      <td>1</td>\n      <td>line create executable create executable word ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>node</td>\n      <td>** does not include files in the current direc...</td>\n      <td>It would be great if its behavior matched that...</td>\n      <td>1</td>\n      <td>would great behavior build prominently include...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>node</td>\n      <td>fixed typos and spacings</td>\n      <td>fixed typos and spacings in `README.md`</td>\n      <td>1</td>\n      <td>fixed fixed</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>node</td>\n      <td>Docker: ERROR: Copybara config file filename s...</td>\n      <td>In README.md\\r\\n&gt; A few environment variables ...</td>\n      <td>1</td>\n      <td>environment exist allow change run copy bara s...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>node</td>\n      <td>Issue VACCUM SQL directive to prevent the DB f...</td>\n      <td>This is a re-patch of 69a69977470dc0b6c0cbccd1...</td>\n      <td>1</td>\n      <td>patch baa added pull request issue directive p...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>node</td>\n      <td>Fix Issue 100: first card in list can never be...</td>\n      <td>Thanks.</td>\n      <td>1</td>\n      <td>thanks fix issue first card list never</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>node</td>\n      <td>Changes are package protected and can't easily...</td>\n      <td>#5 helped with exposing Info programatically b...</td>\n      <td>1</td>\n      <td>found tried use package also package package e...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>node</td>\n      <td>Exception on rotation</td>\n      <td>When I rotate my device I received the followi...</td>\n      <td>1</td>\n      <td>rotate device received following exception pro...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>node</td>\n      <td>BugFix, Resource-ID, ListCard, Abstraction</td>\n      <td>- I maybe fixed the Bug (#22). This should be ...</td>\n      <td>1</td>\n      <td>maybe fixed bug tested able reproduce exceptio...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>node</td>\n      <td>Unable to run coursier on Windows</td>\n      <td>After installing JDK8 and running the first ba...</td>\n      <td>1</td>\n      <td>running first build command get call stack def...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 13
-    }
-   ],
-   "source": [
+    "df=df.dropna()\n",
     "df.head(5)"
    ]
   },
@@ -138,12 +78,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.Create tf_idf_Vector"
+    "### 2.Create tf_idf_vector\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -167,12 +107,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.Create Trainingsset"
+    "### 3.Generate training set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -192,14 +132,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.Create two Classificator\n",
+    "### 4. Create two classifiers\n",
     "\n",
     "#### Bayes Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -223,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -237,7 +177,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 17
+     "execution_count": 25
     }
    ],
    "source": [
@@ -254,7 +194,7 @@
    "source": [
     "### 5. Predict and test\n",
     "\n",
-    "Finding the best model"
+    "##### Find the best model"
    ]
   },
   {
@@ -266,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -296,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -321,12 +261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Safe best model"
+    "### 6. Safe the best model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -346,7 +286,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Uncommend to safe files"
+    "#### uncomment to safe files"
    ],
    "metadata": {
     "collapsed": false
@@ -354,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "#pickle.dump(SVM, open(filename, 'wb'))\n",
@@ -366,7 +306,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   }
